do style corrections on mobile menu

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav {
   bottom: 0;
   z-index: 2;
   height: 140vh;
-  background: #6070ff;
+  /* background: #6070ff; */
   list-style: none;
   padding-top: 4rem;
   mix-blend-mode: multiply;
@@ -71,6 +71,8 @@ nav {
   display: flex;
   transform: translateY(0);
   background-size: cover;
+  background: #6060ff;
+  margin-top: 0;
 }
 
 .nav-button2 {
